[package]
name = "probe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.4", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.17"
image = "0.24"
url = "2.2"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
