[package]
name = "probe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros"] }
tokio = { version = "1.40.0", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
tower = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
scraper = "0.20.0"
image = "0.25.2"
url = "2.5.2"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
